--- a/.github/workflows/mobile-daily-release.yml
+++ b/.github/workflows/mobile-daily-release.yml
@@ -2,10 +2,10 @@ name: "Daily release (photos independent)"
 on:
     workflow_dispatch: # Allow manually running the action
     schedule:
-        # Run daily at 12:00 UTC (noon)
-        - cron: '0 12 * * *'
-        # Run daily at 00:00 UTC (midnight)
-        - cron: '0 0 * * *'
+        # Run daily at 04:00 UTC
+        - cron: '0 4 * * *'
+        # Run daily at 00:00 UTC
+        - cron: '0 16 * * *'
 env:
     FLUTTER_VERSION: "3.24.3"
 permissions:
