--- a/.github/workflows/mobile-branch-release.yml
+++ b/.github/workflows/mobile-branch-release.yml
@@ -2,7 +2,9 @@ name: "Manual branch release (photos independent)"
 on:
     workflow_dispatch: # Allow manually running the action
 env:
-    FLUTTER_VERSION: "3.24.3"
+    FLUTTER_VERSION: "3.32.8"
+    RUST_VERSION: "1.85.1"
+
 permissions:
     contents: write
 jobs:
@@ -17,19 +19,10 @@ jobs:
               with:
                   submodules: recursive
             
-            - name: Generate release tag
-              id: tag
-              run: |
-                  # Generate timestamp-based tag: photos-v2025.08.01.1200
-                  TAG="photos-v$(date -u +'%Y.%m.%d.%H%M')"
-                  echo "tag=$TAG" >> $GITHUB_OUTPUT
-                  echo "Generated tag: $TAG"
-            
             - name: Setup JDK 17
-              uses: actions/setup-java@v4
+              uses: actions/setup-java@v1
               with:
                   java-version: 17
-                  distribution: 'temurin'
             
             - name: Install Flutter ${{ env.FLUTTER_VERSION  }}
               uses: subosito/flutter-action@v2
@@ -37,6 +30,35 @@ jobs:
                   channel: "stable"
                   flutter-version: ${{ env.FLUTTER_VERSION  }}
                   cache: true
+                  
+            - name: Install Rust ${{ env.RUST_VERSION }}
+              uses: dtolnay/rust-toolchain@master
+              with:
+                toolchain: ${{ env.RUST_VERSION }}
+
+            - name: Install Flutter Rust Bridge
+              run: cargo install flutter_rust_bridge_codegen
+              
+            - name: Increment version code for build
+              run: |
+                  CURRENT_VERSION=$(grep '^version:' pubspec.yaml | sed 's/version: //')
+                  VERSION_NAME=$(echo $CURRENT_VERSION | cut -d'+' -f1)
+                  CURRENT_BUILD=$(echo $CURRENT_VERSION | cut -d'+' -f2)
+                  NEW_BUILD=$((CURRENT_BUILD + ${{ github.run_number }}))
+                  NEW_VERSION="${VERSION_NAME}+${NEW_BUILD}"
+
+                  sed -i "s/^version: .*/version: $NEW_VERSION/" pubspec.yaml
+                  echo "Building with version ${NEW_VERSION}"
+
+                  # Get branch name and sanitize it for package name
+                  BRANCH_NAME="${GITHUB_REF#refs/heads/}"
+                  BRANCH_SAFE=$(echo "$BRANCH_NAME" | sed 's/[^a-zA-Z0-9]/_/g' | tr '[:upper:]' '[:lower:]')
+                  echo "Building with branch ${BRANCH_SAFE}"
+                  
+                  # Store version for later use
+                  echo "NEW_VERSION=${NEW_VERSION}" >> $GITHUB_ENV
+                  echo "NEW_VERSION_TAG=photos-dev-${BRANCH_SAFE}-v${NEW_VERSION}" >> $GITHUB_ENV
+                  echo "Building with tag ${NEW_VERSION_TAG}"
             
             - name: Setup keys
               uses: timheuer/base64-to-file@v1
@@ -44,10 +66,10 @@ jobs:
                   fileName: "keystore/ente_photos_key.jks"
                   encodedString: ${{ secrets.SIGNING_KEY_PHOTOS }}
             
-            - name: Build independent APK
+            - name: Build dev APK
               run: |
-                flutter build apk --dart-define=cronetHttpNoPlay=true --release --flavor independent
-                mv build/app/outputs/flutter-apk/app-independent-release.apk build/app/outputs/flutter-apk/ente-${{ steps.tag.outputs.tag }}.apk
+                flutter build apk --dart-define=cronetHttpNoPlay=true --release --flavor dev
+                mv build/app/outputs/flutter-apk/app-dev-release.apk build/app/outputs/flutter-apk/ente-${{ env.NEW_VERSION_TAG }}.apk
               env:
                   SIGNING_KEY_PATH: "/home/runner/work/_temp/keystore/ente_photos_key.jks"
                   SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS_PHOTOS }}
@@ -55,13 +77,16 @@ jobs:
                   SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD_PHOTOS }}
             
             - name: Checksum
-              run: sha256sum build/app/outputs/flutter-apk/ente-${{ steps.tag.outputs.tag }}.apk > build/app/outputs/flutter-apk/sha256sum
+              run: sha256sum build/app/outputs/flutter-apk/ente-${{ env.NEW_VERSION_TAG }}.apk > build/app/outputs/flutter-apk/sha256sum
             
             - name: Create a GitHub release
               uses: ncipollo/release-action@v1
               with:
-                  artifacts: "mobile/apps/photos/build/app/outputs/flutter-apk/ente-${{ steps.tag.outputs.tag }}.apk,mobile/apps/photos/build/app/outputs/flutter-apk/sha256sum"
-                  tag: "manual-${{ steps.tag.outputs.tag }}"
+                  artifacts: "mobile/apps/photos/build/app/outputs/flutter-apk/ente-${{ env.NEW_VERSION_TAG }}.apk,mobile/apps/photos/build/app/outputs/flutter-apk/sha256sum"
+                  tag: ${{ env.NEW_VERSION_TAG }}
+                  name: "${{ env.NEW_VERSION_TAG }}"
+                  draft: false
+                  generateReleaseNotes: true
                   name: "${{ steps.tag.outputs.tag }}"
                   draft: true
                   generateReleaseNotes: true
