--- a/.github/workflows/mobile-daily-release.yml
+++ b/.github/workflows/mobile-daily-release.yml
@@ -8,6 +8,8 @@ on:
         - cron: '0 16 * * *'
 env:
     FLUTTER_VERSION: "3.32.8"
+    RUST_VERSION: "1.85.1"
+    
 permissions:
     contents: write
 jobs:
@@ -62,6 +64,14 @@ jobs:
                   channel: "stable"
                   flutter-version: ${{ env.FLUTTER_VERSION  }}
                   cache: true
+
+            - name: Install Rust ${{ env.RUST_VERSION }}
+              uses: dtolnay/rust-toolchain@master
+              with:
+                toolchain: ${{ env.RUST_VERSION }}
+
+            - name: Install Flutter Rust Bridge
+              run: cargo install flutter_rust_bridge_codegen
 
             - name: Increment version code for build
               run: |
