--- a/.github/workflows/mobile-debug-branch-release.yml
+++ b/.github/workflows/mobile-debug-branch-release.yml
@@ -68,8 +68,8 @@ jobs:
             
             - name: Build dev APK
               run: |
-                flutter build apk --dart-define=cronetHttpNoPlay=true --release --flavor dev
-                mv build/app/outputs/flutter-apk/app-dev-release.apk build/app/outputs/flutter-apk/ente-${{ env.NEW_VERSION_TAG }}.apk
+                flutter build apk --dart-define=cronetHttpNoPlay=true --debug --flavor dev
+                mv build/app/outputs/flutter-apk/app-dev-debug.apk build/app/outputs/flutter-apk/ente-${{ env.NEW_VERSION_TAG }}.apk
               env:
                   SIGNING_KEY_PATH: "/home/runner/work/_temp/keystore/ente_photos_key.jks"
                   SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS_PHOTOS }}
